@@ -166,12 +166,20 @@ AC_ARG_ENABLE(readline,
 [ --enable-readline=[yes/no] Enable readline command editing [default=no]],,
 	enable_readline=no)
 if test $enable_readline = yes; then
-	libreadline="-lreadline -lncurses"
-else
-	libreadline=""
+	libreadline="-lreadline -ltermcap"
 fi
 AC_SUBST(libreadline)
 AC_SUBST(enable_readline)
+
+dnl will we be making use of editline?
+AC_ARG_ENABLE(editline,
+[ --enable-editline=[yes/no] Enable editline command editing [default=no]],,
+	enable_editline=no)
+if test $enable_editline = yes; then
+	libeditline="-ledit -ltermcap"
+fi
+AC_SUBST(libeditline)
+AC_SUBST(enable_editline)
 
 dnl will we be making use of gettext?
 AC_ARG_ENABLE(gettext,
