@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2000-2001 Silicon Graphics, Inc.  All Rights Reserved.
+# Copyright (c) 2000-2003 Silicon Graphics, Inc.  All Rights Reserved.
 #
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of version 2 of the GNU General Public License as
@@ -50,6 +50,11 @@ LLDFLAGS += -static
 ifeq ($(ENABLE_READLINE),yes)
 LLDLIBS += $(LIBREADLINE)
 CFLAGS += -DENABLE_READLINE
+endif
+
+ifeq ($(ENABLE_EDITLINE),yes)
+LLDLIBS += $(LIBEDITLINE)
+CFLAGS += -DENABLE_EDITLINE
 endif
 
 default: $(LTCOMMAND)
