@@ -45,6 +45,11 @@ LLDLIBS += $(LIBREADLINE)
 CFLAGS += -DENABLE_READLINE
 endif
 
+ifeq ($(ENABLE_EDITLINE),yes)
+LLDLIBS += $(LIBEDITLINE)
+CFLAGS += -DENABLE_EDITLINE
+endif
+
 default: $(LTCOMMAND)
 
 include $(BUILDRULES)
